k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-app
  name: python-app
spec:
  selector:
    app: python-app
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
