k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kind-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "python-app.pe-backstage.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: python-app
            port:
              number: 8080
      # - pathType: Prefix
      #   path: /bar
      #   backend:
      #     service:
      #       name: bar-service
      #       port:
      #         number: 8080
